tests/snapshots/run_wpt_conformance__onnx_roundEven_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "round_even.https.any.js",
    "roundEven float32 4D tensor",
    "onnx",
    "PASS",
)
