tests/snapshots/run_wpt_conformance__onnx_scatterElements_float16_1D_tensors_along_axis_0_and_constant_negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterElements.https.any.js",
    "scatterElements float16 1D tensors along axis 0 and constant negative indices",
    "onnx",
    "PASS",
)
